--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
     "morgan": "~1.9.1",
-    "resend": "^6.2.0"
+    "resend": "^6.2.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
